@@ -136,6 +136,8 @@ Features added
 Release 0.6.6 (in development)
 ==============================
 
+* Handle raw nodes in the ``text`` writer.
+
 * Fix a problem the Qt help project generated by the ``qthelp``
   builder that would lead to no content being displayed in the Qt
   Assistant.
